<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log_user">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/signpage" />

    <TextView
        android:id="@+id/toolbar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp"

        android:textColor="@color/black"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Emaillogintextlayout"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:layout_below="@+id/toolbar_id"
        android:hint="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:background="@drawable/back"
            android:hint="Email"
            android:paddingLeft="20sp"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password_login_text_inputLayout"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:layout_below="@+id/Emaillogintextlayout"
        app:endIconMode="password_toggle"
        android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/back"
            android:hint="Password"
            android:paddingLeft="20sp"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button_id"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Password_login_text_inputLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/blue"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>
